--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -7,9 +7,9 @@ output:
 #   data_date: "2020-03-26"
 #   sha: "sha"
 ---
-<center>
-![people walking on a park trail](www/Walk-on-path.png)
-</center>
+
+<img src='www/Walk-on-path.png' width='100%'/img>
+
 
 ## Introduction
 
@@ -26,7 +26,7 @@ The app complements the [Regional Parks Equity Toolkit](https://metrocouncil.org
 
 **Map** - is an interactive tool that maps key demographic variables alongside regional parks and trails.
         
-**Summary** - is a data visualization that produces discrete demographic characteristics for user-defined inputs across the regional park and trail system. The tool incorporates existing, planned, and search areas for parks and trails. Within this tab, there are **weighted averages** which will be suitable for most users, a **buffer map** which illustrates the buffer zones geospatially, and the option for users to **download tabular data**
+**Summary** - is a data visualization that produces discrete demographic characteristics for user-defined inputs across the regional park and trail system. The tool incorporates existing, planned, and search areas for parks and trails. Within this tab, there are **weighted averages** which will be suitable for most users, a **buffer map** which illustrates the buffer zones geospatially, and the option for users to **download tabular data**.
 
 
 **Population Growth** - is an interactive map which allows users to view estimated population growth through 2040 alongside regional parks and trails.
@@ -34,11 +34,6 @@ The app complements the [Regional Parks Equity Toolkit](https://metrocouncil.org
 **Notes** - provides more information about the background of this tool.
 
 #### **Please click on the individual tabs on the top to start using this tool.**
-
-
-<!-- ## ACS Variable Dictionary  -->
-
-<!-- Statistics produced for American Community Survey and included in ACS tables are survey-based estimates and are subject to error. The errors derive from research design (including instrument bias, data frame, and sampling), the survey data collection (non-response bias and response errors), and processing by the Census Bureau (data coding, compilation processes, and case weighting), as well as statistical inference error and uncertainty (which are related to sample size and variance within the measured attributes).   -->
 
 
 
