--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -9,21 +9,22 @@
 @Manual{config,
   title = {config: Manage Environment Specific Configuration Values},
   author = {JJ Allaire},
-  year = {2020},
-  note = {R package version 0.3.1},
+  year = {2018},
+  note = {R package version 0.3},
   url = {https://CRAN.R-project.org/package=config},
 }
 
 @Manual{councilR,
   title = {councilR: Functions and Templates for the Metropolitan Council},
   author = {Liz Roten},
+  year = {2020},
   note = {R package version 0.1.0},
 }
 
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel {
-             Henry} and Kirill Müller},
+  author = {Hadley Wickham and Romain FranÃ§ois and Lionel {
+             Henry} and Kirill MÃ¼ller},
   year = {2020},
   note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
@@ -39,7 +40,7 @@
 
 @Manual{golem,
   title = {golem: A Framework for Robust Shiny Applications},
-  author = {Vincent Guyader and Colin Fay and Sébastien Rochette and Cervan Girard},
+  author = {Vincent Guyader and Colin Fay and SÃ©bastien Rochette and Cervan Girard},
   year = {2020},
   note = {R package version 0.2.1},
   url = {https://CRAN.R-project.org/package=golem},
@@ -72,7 +73,7 @@ Library},
 
 @Manual{processx,
   title = {processx: Execute and Control System Processes},
-  author = {Gábor Csárdi and Winston Chang},
+  author = {GÃ¡bor CsÃ¡rdi and Winston Chang},
   year = {2020},
   note = {R package version 3.4.5},
   url = {https://CRAN.R-project.org/package=processx},
@@ -82,8 +83,8 @@ Library},
   title = {shiny: Web Application Framework for R},
   author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
   year = {2020},
-  note = {R package version 1.5.0.9001},
-  url = {http://shiny.rstudio.com},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=shiny},
 }
 
 @Manual{pkgload,
@@ -116,7 +117,7 @@ Library},
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2020},
-  note = {R package version 1.13.6},
+  note = {R package version 1.13.0},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 
@@ -147,8 +148,8 @@ Library},
 @Manual{janitor,
   title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
   author = {Sam Firke},
-  year = {2021},
-  note = {R package version 2.1.0},
+  year = {2020},
+  note = {R package version 2.0.1},
   url = {https://CRAN.R-project.org/package=janitor},
 }
 
