--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -33,7 +33,7 @@ The app complements the [Regional Parks Equity Toolkit](https://metrocouncil.org
 
 **Notes** - provides more information about the background of this tool.
 
-#### **Please click on the individual tabs on the top to start using this tool.**
+#### **We suggest you use a desktop web browser. Please click on the individual tabs on the top to start using this tool.**
 
 
 
