boost heading sizes; clean up bib

--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -9,8 +9,8 @@
 @Manual{config,
   title = {config: Manage Environment Specific Configuration Values},
   author = {JJ Allaire},
-  year = {2018},
-  note = {R package version 0.3},
+  year = {2020},
+  note = {R package version 0.3.1},
   url = {https://CRAN.R-project.org/package=config},
 }
 
@@ -83,8 +83,8 @@ Library},
   title = {shiny: Web Application Framework for R},
   author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
   year = {2020},
-  note = {R package version 1.5.0},
-  url = {https://CRAN.R-project.org/package=shiny},
+  note = {R package version 1.5.0.9001},
+  url = {http://shiny.rstudio.com},
 }
 
 @Manual{pkgload,
@@ -117,7 +117,7 @@ Library},
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2020},
-  note = {R package version 1.13.0},
+  note = {R package version 1.13.6},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 
@@ -148,8 +148,8 @@ Library},
 @Manual{janitor,
   title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
   author = {Sam Firke},
-  year = {2020},
-  note = {R package version 2.0.1},
+  year = {2021},
+  note = {R package version 2.1.0},
   url = {https://CRAN.R-project.org/package=janitor},
 }
 
