hardcode remove a couple extra unneeded rdas

--- a/data-raw/Processing data for parks.acs app.Rmd
+++ b/data-raw/Processing data for parks.acs app.Rmd
@@ -131,25 +131,6 @@ source("pop_est.R")
 ```
 
 ## Only keep final files
-agency_avg
-agency_boundary
-block_group
-block_group_map
-buffer_geo
-census_tract
-census_tract_map
-collar_filter
-county_outlines
-demo_shifts
-entrance
-est_pop
-long_buffer_data
-park_trail_geog_LONG
-river_lake
-taz_growth
-trans_stops
-entrance
-water_access
 
 ```{r}
 fs::file_delete("../data/agency_avg_bg.rda")
@@ -160,6 +141,8 @@ fs::file_delete("../data/block_group_raw.rda")
 fs::file_delete("../data/census_tract_raw.rda")
 fs::file_delete("../data/long_buffer_data_bg.rda")
 fs::file_delete("../data/long_buffer_data_tract.rda")
+fs::file_delete("../data/block_group.rda")
+fs::file_delete("../data/census_tract.rda")
 ```
 
 
