--- a/reference_doc.Rmd
+++ b/reference_doc.Rmd
@@ -13,7 +13,7 @@ The majority of data used in this app are derived from the American Community Su
 
 Further, producing the "weighted averages" necessarily assumed equal distributions of populations across individual census block groups or tracts in order. Population characteristics are likely to be heterogeneous, rather than homogeneous, across areas. Thus, observed population characteristics within a given buffer distance may not reflect the weighted averages presented here, but that does not diminish the value of the weighted averages as a starting point for conversations and actions to increase equitable usage of parks and trails across the Metro Region. 
 
-ACS statistics were used to calculate the percent of people with a certain characteristic within each block group or tract. We scaled these percentages by the 2019 small area population estimates to obtain a more accurate number of people within each group (this more accurate measure of population is not available in collar counties). Weighted averages were produced by multiplying by the percent overlap of a given block group or tract with the buffer zone around individual park and trail units. 
+ACS statistics were used to calculate the percent of people with a certain characteristic within each block group or tract. We scaled these percentages by the 2019 small area population estimates to obtain a more accurate number of people within each group (this more accurate measure of population is not available in collar counties). Weighted averages were produced by multiplying by the percent overlap of a given block group or tract with the buffer zone around individual park and trail units. Variables on disability (% with an ambulatory disability, % with any other disability) and national origin (% US-born, % foreign-born) were calculated at the tract level. All other variables were calculated at the block group.
 
 ### Data sources
 
