--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -49,8 +49,8 @@
 @Manual{htmltools,
   title = {htmltools: Tools for HTML},
   author = {Joe Cheng and Carson Sievert and Winston Chang and Yihui Xie and Jeff Allen},
-  year = {2020},
-  note = {R package version 0.5.0},
+  year = {2021},
+  note = {R package version 0.5.1.1},
   url = {https://CRAN.R-project.org/package=htmltools},
 }
 
@@ -81,9 +81,9 @@ Library},
 
 @Manual{shiny,
   title = {shiny: Web Application Framework for R},
-  author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
-  year = {2020},
-  note = {R package version 1.5.0},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+  year = {2021},
+  note = {R package version 1.6.0},
   url = {https://CRAN.R-project.org/package=shiny},
 }
 
