--- a/BufferHelp.Rmd
+++ b/BufferHelp.Rmd
@@ -17,11 +17,7 @@ Buffer distances (in miles) extend from the perimeter of units. For trails, the 
 ```{r include=F}
 library(tidyverse)
 library(sf)
-```
 
-Example of buffer distances around a park polygon
-
-```{r echo=F, message=F, warning=F, fig.width=2, fig.height=2}
 park <- regionalparks.acs::park_trail_geog_LONG[c(15),0] %>%
   st_transform(3857)
 buf025 <- park  %>%
@@ -35,21 +31,23 @@ tbuf025 <- trail  %>%
   st_buffer(dist = 1609.34 * .25)
 tbuf05 <- trail  %>%
   st_buffer(dist = 1609.34 * .5)
+```
 
+Example of two different buffer distances (dark grey, light grey) around a park polygon (green)
+
+```{r echo=F, fig.width=2, fig.height=2}
 ggplot() +
   geom_sf(data = buf05, fill = "grey90") +
   geom_sf(data = buf025, fill = "grey70") +
   geom_sf(data = park, fill = "#78A22F") +
-  # geom_segment(aes(y = 0, x = 0, yend = 0, xend = 1), inherit.aes = F)
-  # geom_segment(aes(x = 44.977, y = 93.165, xend = 44.977, yend = 93.130), inherit.aes = F)
   theme_void()
-  # geom_text(data = recruitment_info, aes(x=Long, y=Lat, group=Centre, label=Centre), size = 3, hjust=0, vjust=-1)
 
 ```
  
 <br>
-Example of buffer distances around a trail segment
+Example of two different buffer distances (dark grey, light grey) around a trail segment (green)
 <br>
+
 ```{r echo=F, message=F, warning=F, fig.width=2, fig.height=2}
 ggplot() +
   geom_sf(data = tbuf05, fill = "grey90") +
