text updates, thanks Krysten!

--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -10,7 +10,7 @@ output:
 
 <img src='www/Walk-on-path.png' width='100%'/img>
 
-# Welcome to the Regional Parks and Trails Equity Tool! 
+# Welcome to the Regional Parks and Trails Equity Tool 
 If you have a question or need help using this tool or interpreting results, please contact [Darcie Vandegrift](mailto:darcie.vandegrift@metc.state.mn.us?subject=RPT%20equity%20tool) for assistance. Please click on the individual tabs on the top to start using this tool. We suggest you use a desktop web browser for the best experience.
 
 ## What this tool does 
