--- a/BufferHelp.Rmd
+++ b/BufferHelp.Rmd
@@ -12,7 +12,7 @@ output:
 
 -----
 
-Buffer distances (in miles) extend from the perimeter of units. For trails, the buffer distance is effectively a radius (i.e. a 1.0 mile buffer on each side of a trail would mean a 2.0 mile diameter path centered on the trail.) <br><br>
+Buffer distances (in miles) extend from the perimeter of park or trail units. For trails, the buffer distance is effectively a radius. For example, a one-mile buffer on each side of a trail would mean a two-mile diameter path centered on the trail. <br><br>
 
 ```{r include=F}
 library(tidyverse)
