replace user guide text

--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -11,7 +11,7 @@ output:
 <img src='www/Walk-on-path.png' width='100%'/img>
 
 # Welcome to the Regional Parks and Trails Equity Tool 
-A <a href="https://www.youtube.com/watch?v=gUBI4CIJNLQ" target="_blank">video user guide</a> and a <a href="www/Text-User-Guide.pdf" target="_blank">text user guide</a> have been provided for this tool. If you have an unanswered question or need additional help using this tool or interpreting results, please contact [Darcie Vandegrift](mailto:darcie.vandegrift@metc.state.mn.us?subject=RPT%20equity%20tool) for assistance. Please click on the individual tabs on the top to start using this tool. We suggest you use a desktop web browser for the best experience.
+A <a href="https://www.youtube.com/watch?v=gUBI4CIJNLQ" target="_blank">video user guide</a> and a <a href="www/Regional Parks and Trails Equity Tool User Guide (March 2021).pdf" target="_blank">text user guide</a> have been provided for this tool. If you have an unanswered question or need additional help using this tool or interpreting results, please contact [Darcie Vandegrift](mailto:darcie.vandegrift@metc.state.mn.us?subject=RPT%20equity%20tool) for assistance. Please click on the individual tabs on the top to start using this tool. We suggest you use a desktop web browser for the best experience.
 
 ## What this tool does 
 This interactive provides data—primarily census and Council data—on the characteristics of residents near parks and trails in the Twin Cities’ regional system. It provides a snapshot of who lives there today, and the population changes forecasted to 2040.
