--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -9,22 +9,23 @@
 @Manual{config,
   title = {config: Manage Environment Specific Configuration Values},
   author = {JJ Allaire},
-  year = {2018},
-  note = {R package version 0.3},
+  year = {2020},
+  note = {R package version 0.3.1},
   url = {https://CRAN.R-project.org/package=config},
 }
 
 @Manual{councilR,
   title = {councilR: Functions and Templates for the Metropolitan Council},
   author = {Liz Roten},
-  note = {R package version 0.1.0},
+  year = {2021},
+  note = {R package version 0.1.0.9000},
 }
 
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel {
-             Henry} and Kirill Müller},
-  year = {2020},
+  year = {2021},
+  note = {R package version 1.0.5},
   note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
@@ -48,8 +49,8 @@
 @Manual{htmltools,
   title = {htmltools: Tools for HTML},
   author = {Joe Cheng and Carson Sievert and Winston Chang and Yihui Xie and Jeff Allen},
-  year = {2020},
-  note = {R package version 0.5.0},
+  year = {2021},
+  note = {R package version 0.5.1.1},
   url = {https://CRAN.R-project.org/package=htmltools},
 }
 
@@ -57,16 +58,16 @@
   title = {leaflet: Create Interactive Web Maps with the JavaScript 'Leaflet'
 Library},
   author = {Joe Cheng and Bhaskar Karambelkar and Yihui Xie},
-  year = {2019},
-  note = {R package version 2.0.3},
+  year = {2021},
+  note = {R package version 2.0.4.1},
   url = {https://CRAN.R-project.org/package=leaflet},
 }
 
 @Manual{magrittr,
   title = {magrittr: A Forward-Pipe Operator for R},
   author = {Stefan Milton Bache and Hadley Wickham},
-  year = {2014},
-  note = {R package version 1.5},
+  year = {2020},
+  note = {R package version 2.0.1},
   url = {https://CRAN.R-project.org/package=magrittr},
 }
 
@@ -74,23 +75,23 @@ Library},
   title = {processx: Execute and Control System Processes},
   author = {Gábor Csárdi and Winston Chang},
   year = {2020},
-  note = {R package version 3.4.4},
+  note = {R package version 3.4.5},
   url = {https://CRAN.R-project.org/package=processx},
 }
 
 @Manual{shiny,
   title = {shiny: Web Application Framework for R},
-  author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
-  year = {2020},
-  note = {R package version 1.5.0},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+  year = {2021},
+  note = {R package version 1.6.0},
   url = {https://CRAN.R-project.org/package=shiny},
 }
 
 @Manual{pkgload,
   title = {pkgload: Simulate Package Installation and Attach},
   author = {Hadley Wickham and Jim Hester and Winston Chang},
-  year = {2020},
-  note = {R package version 1.1.0},
+  year = {2021},
+  note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=pkgload},
 }
 
@@ -115,8 +116,8 @@ Library},
 @Manual{data.table,
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
-  year = {2020},
-  note = {R package version 1.13.0},
+  year = {2021},
+  note = {R package version 1.14.0},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 
@@ -147,7 +148,7 @@ Library},
 @Manual{janitor,
   title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
   author = {Sam Firke},
-  year = {2020},
-  note = {R package version 2.0.1},
+  year = {2021},
+  note = {R package version 2.1.0},
   url = {https://CRAN.R-project.org/package=janitor},
 }
