add favicon (to be metcouncil)

--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -9,8 +9,8 @@
 @Manual{config,
   title = {config: Manage Environment Specific Configuration Values},
   author = {JJ Allaire},
-  year = {2020},
-  note = {R package version 0.3.1},
+  year = {2018},
+  note = {R package version 0.3},
   url = {https://CRAN.R-project.org/package=config},
 }
 
@@ -24,8 +24,8 @@
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel {
-  year = {2021},
-  note = {R package version 1.0.5},
+             Henry} and Kirill Müller},
+  year = {2020},
   note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
@@ -58,8 +58,8 @@
   title = {leaflet: Create Interactive Web Maps with the JavaScript 'Leaflet'
 Library},
   author = {Joe Cheng and Bhaskar Karambelkar and Yihui Xie},
-  year = {2021},
-  note = {R package version 2.0.4.1},
+  year = {2019},
+  note = {R package version 2.0.3},
   url = {https://CRAN.R-project.org/package=leaflet},
 }
 
@@ -90,8 +90,8 @@ Library},
 @Manual{pkgload,
   title = {pkgload: Simulate Package Installation and Attach},
   author = {Hadley Wickham and Jim Hester and Winston Chang},
-  year = {2021},
-  note = {R package version 1.2.0},
+  year = {2020},
+  note = {R package version 1.1.0},
   url = {https://CRAN.R-project.org/package=pkgload},
 }
 
@@ -116,8 +116,8 @@ Library},
 @Manual{data.table,
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
-  year = {2021},
-  note = {R package version 1.14.0},
+  year = {2020},
+  note = {R package version 1.13.0},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 
@@ -148,8 +148,8 @@ Library},
 @Manual{janitor,
   title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
   author = {Sam Firke},
-  year = {2021},
-  note = {R package version 2.1.0},
+  year = {2020},
+  note = {R package version 2.0.1},
   url = {https://CRAN.R-project.org/package=janitor},
 }
 
