--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -23,7 +23,7 @@ Users can create valuable, data-driven analysis through this app. But our experi
 We developed this interactive tool primarily for regional park agency planning, outreach, programming, research and other agency staff. It is available for anyone who wants detailed information about housing and demographic data surrounding the existing and future regional park system.
 
 ## How you can use it
-- **Planning**. Understanding today’s proximate demographics can help inform questions about needed amenities like multilingual signage. Visualizing forecasted changes in population can help plan for the future. Further, this tool can help complete the <a href="https://metrocouncil.org/Parks/Planning/Parks-Equity-Toolkit.aspx" target="_blank">Council’s Equity Analysis Requirement for park and trail master plans (Question 1 *Project Data*)</a>.
+- **Planning**. Understanding today’s proximate demographics can help inform questions about needed amenities like multilingual signage. Visualizing forecasted changes in population can help plan for the future. Further, this tool can help complete the <a href="https://metrocouncil.org/Parks/Publications-And-Resources/POLICY-PLANS/2040-REGIONAL-PARKS-POLICY-PLAN-(2020-version)/2040-Regional-Parks-Policy-Plan.aspx#page=83" target="_blank">Equity Analysis Requirement for park and trail master plans (Question 1 *Project Data*)</a>.
 
 - **Outreach and Engagement**. Learning more about who lives near parks and trails can guide strategies for community partnerships, communications efforts, and equity investments such as translation or transportation. 
 
