--- a/data-raw/Processing data for parks.acs app.Rmd
+++ b/data-raw/Processing data for parks.acs app.Rmd
@@ -14,6 +14,8 @@ urlcolor: blue
 ---
 
 ```{r include=F, warning=F, message=F}
+knitr::opts_chunk$set(echo = F, message = F, warning = F)
+
 library(tidyverse)
 library(sf)
 library(tigris)
@@ -22,6 +24,8 @@ library(tigris)
 # Overview
 
 This markdown file walks through the creation of all the data files necessary to run the parks.acs app. 
+
+**You must connect to the N drive to run this script**
 
 
 ## Park and trail geography
@@ -48,15 +52,17 @@ source("park_amenities.R")
 ACS data at both the tract and block group levels needs to be processed for the 7 county core, as well as collar counties. We want to include the collar counties within this processing step because the buffer area for some parks and trails extends into areas beyond the 7 county core region. 
 
 Running `census_tract_raw.R` produces:
-- `county_outlines.rda` (leveraging the fact that we have to load the tigris package anyways)
+
+- `county_outlines.rda` (leveraging the fact that we have to load the `tigris` package anyways)
 - `census_tract_raw.rda`
 
 Running `block_group_raw.R` produces:
+
 - `block_group_raw.rda`
 
 If acs variables need to be added, this is one place where that should be done.
 
-```{r unitgeo, message=FALSE, warning = F, echo = F}
+```{r rawdata, message=FALSE, warning = F, echo = F}
 source("census_tract_raw.R")
 source("block_group_raw.R")
 ```
@@ -67,12 +73,14 @@ source("block_group_raw.R")
 And this is also done at the block group and tract levels. In some cases demographic variables are suppressed at the block group. We must process those variables at the tract level. 
 
 Running `weighted_avs_bg.R` produces:
+
 - `agency_avg_bg.rda` (the average acs values within an implementing agency's jurisdiction)
 - `long_buffer_data_bg.rda` (acs values for each park/trail unit at each buffer distance for the variables which exist at the block group level)
 - `agency_planned_existing_avgs` (agency-level averages for each variable including existing and planned units)
 - `buffer_geo.rda` (the buffer geometries at 1, 1.5 and 3 mi radii. these will be plotted)
 
 Running `weighted_avs_tracts.R` produces:
+
 - `long_buffer_data_tract.rda` ()
 - `agency_planned_existing_avgs_tract.rda` ()
 - `agency_avg_tract` ()
@@ -80,7 +88,7 @@ Running `weighted_avs_tracts.R` produces:
 and then we will join the 2 geographies together to create one cohesive weighted average dataset. 
 
 Create some helper functions
-```{r unitgeo, message=FALSE, warning = F, echo = F}
+```{r weighteddata, message=FALSE, warning = F, echo = F}
 agency_filter <- tibble(
   agency = c(
     "Anoka County", # Parks and Recreation",
@@ -230,6 +238,7 @@ usethis::use_data(agency_avg, overwrite = TRUE)
 We only want to plot the block groups/tracts within the 7 county core region or within the collar counties if the bg/tract intersects with a buffer
 
 Running this produces: 
+
 - `collar_filter.rda`
 - `block_group.rda`
 - `census_tract.rda`
@@ -244,6 +253,7 @@ source("acs_geo.R")
 This script doesn't depend on inputs from any other script.
 
 Running this produces:
+
 - `est_pop.rda`
 
 ```{r popest, message=FALSE, warning = F, echo = F}
